# newsdedup

./: .gitignore  Makefile  README.md  backends.py  list_feeds.py  newsdedup.cfg.default  newsdedup.example.toml  newsdedup.py  newsdedup.service.default  newsdedup.toml  newsdedup.toml.example  pip-requires.txt  pyproject.toml  requirements.txt  test_newsdedup.py  unstar.py
.github/: dependabot.yml
.github/linters/: .flake8  .python-lint
.github/workflows/: linter.yml  osv-scanner.yml  owasp-dependency-check.yml  python-package.yml
